--- a/index.html
+++ b/index.html
@@ -183,22 +183,6 @@ https://jsoma.github.io/page-templates/basic/index.html
             veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
             consequatur?</p>
     </div>
-    <div class="full-width">
-        <figure>
-            <img
-                src="https://static01.nyt.com/images/2024/02/01/multimedia/01eu-hungary-orban-2-ghkw/01eu-hungary-orban-2-ghkw-superJumbo.jpg?quality=75&auto=webp">
-            <figcaption>This is another image caption, but this time it's a full-width image</figcaption>
-        </figure>
-    </div>
-    <div class="content">
-        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
-            atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique
-            sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
-        <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi
-            optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est,
-            omnis dolor repellendus.</p>
-    </div>
-
 
 <!-- PHOTO2 HERE -->
 
@@ -214,6 +198,25 @@ https://jsoma.github.io/page-templates/basic/index.html
     </div>
 
 <!-- ENDS --->
+	
+	<div class="content">
+        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
+            atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique
+            sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+        <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi
+            optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est,
+            omnis dolor repellendus.</p>
+    </div>
+
+
+<!-- Graph2 HERE -->
+
+        <figure>
+		<img src="graph1.png">
+            	<figcaption>This is an image caption</figcaption>
+      </figure>
+
+<!-- ENDS --->
 
     <div class="content">
         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
@@ -223,7 +226,23 @@ https://jsoma.github.io/page-templates/basic/index.html
             optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est,
             omnis dolor repellendus.</p>
     </div>
-    <div class="footer">
+
+
+<!-- PHOTO3 HERE -->
+
+        <figure>
+            <img
+                src="https://article-image-ix.nikkei.com/https%3A%2F%2Fimgix-proxy.n8s.jp%2FDSXZQO6589590026062025000000-1.jpg?ixlib=js-3.8.0&w=1276&h=850&auto=format%2Ccompress&fit=crop&bg=FFFFFF&s=2847af0cdbfd0b76f20a7159f857d7ce">
+            <figcaption>This is an image caption</figcaption>
+
+            <figcaption>This is an auto-play video. I had to edit the CSS from the original form a little, added
+                <code>max-width: 100%</code> for the <code>video</code> tag.</figcaption>
+        </figure>
+
+<!-- ENDS --->
+	
+	
+	<div class="footer">
         <div class="content">
             <p>You can find the code for this template <a href="https://github.com/jsoma/page-templates/">here</a>.
                 Delete these lines
