--- a/index.html
+++ b/index.html
@@ -135,11 +135,13 @@ https://jsoma.github.io/page-templates/basic/index.html
 
 
 <!-- GRAPH1 HERE -->
+	<div class="full-width">
+		<figure> 
+			<img src="graph1.png">
+		          <figcaption>This is an image caption</figcaption>
+		</figure>
+ 	</div>
 
-	<figure> 
-		<img src="graph1.png">
-	          <figcaption>This is an image caption</figcaption>
-	</figure>
 
 <!-- ENDS --->
 
@@ -235,14 +237,12 @@ https://jsoma.github.io/page-templates/basic/index.html
                 src="https://article-image-ix.nikkei.com/https%3A%2F%2Fimgix-proxy.n8s.jp%2FDSXZQO6589590026062025000000-1.jpg?ixlib=js-3.8.0&w=1276&h=850&auto=format%2Ccompress&fit=crop&bg=FFFFFF&s=2847af0cdbfd0b76f20a7159f857d7ce">
             <figcaption>This is an image caption</figcaption>
 
-            <figcaption>This is an auto-play video. I had to edit the CSS from the original form a little, added
-                <code>max-width: 100%</code> for the <code>video</code> tag.</figcaption>
         </figure>
 
 <!-- ENDS --->
 	
 	
-	<div class="footer">
+　　<div class="footer">
         <div class="content">
             <p>You can find the code for this template <a href="https://github.com/jsoma/page-templates/">here</a>.
                 Delete these lines
