--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ https://jsoma.github.io/page-templates/basic/index.html
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Story template</title>
+    <title>PROJECT SITE 1</title>
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -122,7 +122,7 @@ https://jsoma.github.io/page-templates/basic/index.html
             <p class="subhead">Here is the subhead or additional content you want to add in</p>
         </div>
         <div class="byline">
-            <p>By <a href="https://jonathansoma.com">Jonathan Soma</a></p>
+            <p>By JUN HOMMA</a></p>
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
