--- a/index.html
+++ b/index.html
@@ -136,11 +136,13 @@ https://jsoma.github.io/page-templates/basic/index.html
 
 <!-- GRAPH1 HERE -->
 	<div class="full-width">
+
 		<figure> 
-			<img src="graph1.png">
+			<img src="graph1.png" width="100%">
 		          <figcaption>This is an image caption</figcaption>
 		</figure>
- 	</div>
+
+	</div>
 
 
 <!-- ENDS --->
@@ -213,11 +215,12 @@ https://jsoma.github.io/page-templates/basic/index.html
 
 <!-- Graph2 HERE -->
 
+	<div>
         <figure>
 		<img src="graph1.png">
             	<figcaption>This is an image caption</figcaption>
       </figure>
-
+	</div>
 <!-- ENDS --->
 
     <div class="content">
