--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@ https://jsoma.github.io/page-templates/basic/index.html
 <body>
     <div class="content">
         <div class="header">
-            <h1>This is the headline of the story you are about to read</h1>
-            <p class="subhead">Here is the subhead or additional content you want to add in</p>
+            <h1>Panda Diplomacy: How China Leverage its Soft Power Against Japan</h1>
+            <p class="subhead">Japan begs its neighbor a new panda as leasehold expires</p>
         </div>
         <div class="byline">
             <p>By JUN HOMMA</a></p>
