--- a/index.html
+++ b/index.html
@@ -145,16 +145,7 @@ https://jsoma.github.io/page-templates/basic/index.html
 	</div>
 
 
-<!-- ENDS --->
 
-
-<!--IFRAME FROM TEMPLATE
-        <iframe title="The biggest pumpkins, by state (Copy)" aria-label="Bar Chart" id="datawrapper-chart-MLQxw"
-            src="https://datawrapper.dwcdn.net/MLQxw/1/" scrolling="no" frameborder="0"
-            style="width: 0; min-width: 100% !important; border: none;" height="757" data-external="1"></iframe>
-        <script type="text/javascript">!function () { "use strict"; window.addEventListener("message", (function (a) { if (void 0 !== a.data["datawrapper-height"]) { var e = document.querySelectorAll("iframe"); for (var t in a.data["datawrapper-height"]) for (var r = 0; r < e.length; r++)if (e[r].contentWindow === a.source) { var i = a.data["datawrapper-height"][t] + "px"; e[r].style.height = i } } })) }();
-        </script>
--->
         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
             aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
             Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
@@ -213,12 +204,11 @@ https://jsoma.github.io/page-templates/basic/index.html
 
 
 <!-- Graph2 HERE -->
-
 	<div>
-        <figure>
-		<img src="graph1.png">
-            	<figcaption>This is an image caption</figcaption>
-      </figure>
+
+	<iframe title="GIFTING MORE THAN GIVEN" aria-label="Bar Chart" id="datawrapper-chart-JzeFP" src="https://datawrapper.dwcdn.net/JzeFP/2/" scrolling="no" frameborder="0" style="border: none;" width="600" height="269" data-external="1">
+	</iframe>
+	    
 	</div>
 <!-- ENDS --->
 
