--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@ https://jsoma.github.io/page-templates/basic/index.html
         iframe,
         img,
         video {
-            max-width: 100%;
+            /* max-width: 100%; */
+            width: 100%;
         }
 
         p {
