--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ https://jsoma.github.io/page-templates/basic/index.html
         video {
             /* max-width: 100%; */
             width: 100%;
-            hight: 500px;
+            hight: 500px !important;
 
 	}
 
