--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@ https://jsoma.github.io/page-templates/basic/index.html
     <div class="content">
         <div class="header">
             <h1>Panda Diplomacy: How China Leverage its Soft Power Against Japan</h1>
-            <p class="subhead">Japan begs its neighbor a new panda as leasehold expires</p>
+            <p class="subhead">Japan begs its neighbor a new panda as the lease period is expiring. Is it sounds natural because that animal is native to China? The answer is not that simple.
+		</p>
         </div>
         <div class="byline">
             <p>By JUN HOMMA</a></p>
