--- a/index.html
+++ b/index.html
@@ -277,7 +277,14 @@ Tantan, the last surviving female giant panda at Kobe's Oji Zoo lived up to 28-y
 
 　　<div class="footer">
         <div class="content">
-            <p>You can find the code for this template <a href="https://github.com/jsoma/page-templates/">here</a></p>
+
+		
+<p>
+This article was inspired by a casual remark made during a lecture at Columbia University's Lede Program in June 2025. When instructing students to use the Python computing library “Pandas” for homework, lecturer Sandy Sadhya added that it was not the animal panda. However, I took it seriously and decided to write a story about pandas. It turned out to be an unexpected and enjoyable journey.
+</p>
+<p>
+For those interested: The individual giant panda data used in the graphs was sourced from official zoo websites and other reliable blog articles. It was created using a combination of manual data entry in Excel and simple web scraping. The data was imported into DataWrapper, where four types of images were output per series, and then manually overlaid in Adobe Illustrator. You can find the code <a href="https://github.com/jsoma/page-templates/">here</a>
+</p>
         </div>
     </div>
 </body>
