--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ https://jsoma.github.io/page-templates/basic/index.html
 		</li><br>
             	<li>The bilateral cooperation on breeding these animals has proven successful. According to our data analysis, Japan has bred far more pandas than it borrowed from China and has exported them back to the country.
 		</li><br>
-	        <li>Regardless of where they were born, the actual ownership of all pandas remains with the Chinese government, and Japan cannot keep the pandas it has bred within its borders. Desperate efforts are being made in Japan to secure the goodwill of the Chinese government.
+	        <li>Regardless of where they were born, the practical control over all pandas remains with the Chinese government, and Japan cannot keep the pandas it has bred within its borders. Efforts are now being made by Tokyo to secure the goodwill of Beijing.
 		</li><br>
 	</ul>
     </div>
@@ -175,7 +175,7 @@ https://jsoma.github.io/page-templates/basic/index.html
 <br>
 	
 <p>
-Chinese Vice Premier He Lifeng is expected to visit Japan soon. This was announced on July 7. This comes after a delegation of members of the Japan-China Friendship Parliamentarians' League, including Liberal Democratic Party Secretary-General Yutaka Moriyama, the No. 2 in the ruling party, held a series of talks with Chinese government officials, including Zhao Leji, the No. 3 in the Chinese Communist Party, in Beijing at the end of April and requested a visit by Communist Party officials to Japan.
+Chinese Vice Premier He Lifeng is expected to visit Japan soon, according to multiple media reports published on July 7. This comes after a delegation of parliament members, including Yutaka Moriyama, the No. 2 in the ruling party, held a series of talks with Chinese government officials, including Zhao Leji, the No. 3 in the Chinese Communist Party, in Beijing at the end of April and requested a visit by Communist Party officials to Japan.
 </p>
 <p>
 He's visit comes amid tensions between the two countries over semiconductors, rare earths, and the geopolitics of the Taiwan Strait. However, the news headlines were dominated by the giant panda loan issue.During his visit to China, Moriyama emphasized that “human exchange and mutual understanding are essential for improving relations between the two countries, given that the feelings of the two peoples are not exactly friendly,” while requesting the loan of giant pandas in front of reporters' cameras.
@@ -208,7 +208,7 @@ The loan of pandas has always been used as a bargaining chip in Chinese diplomac
 Later, Adventure World in Wakayama Prefecture, operated by a private company, launched the world's first joint Sino-Japanese panda breeding program using the breeding loan system in 1994. Eimei, who arrived at the park at that time, became a key figure in breeding research, giving birth to a total of 16 cubs before being returned to China in February 2023.In 1994, Kobe City Oji Zoo, located near Osaka, also added panda breeding facilities to its grounds.
 </p>
 <p>
-Since 2000, panda cubs have been born at domestic zoos almost every year, attracting media attention. For a nation that has grown so attached to pandas over more than half a century, the possibility of pandas disappearing from domestic zoos was perceived as a far more real threat than war.Each transaction was based on prior loan agreements and was by no means surprising. However, given the timing of the repatriation, which coincided with numerous diplomatic negotiations, it is not surprising that there has been much speculation about whether the decision was intentional or not.
+Since 2000, panda cubs have been born at domestic zoos almost every year, attracting media attention. For a nation that has grown so attached to pandas over more than half a century, the possibility of pandas disappearing from domestic zoos was perceived as a far more real threat than the potential war over the strait. Each transaction was based on prior loan agreements and was by no means surprising. However, given the timing of the repatriation, which coincided with numerous diplomatic negotiations, it is not surprising that there has been much speculation about whether the decision was intentional or not.
 </p>
 
 
@@ -302,10 +302,10 @@ Tantan, the last surviving female giant panda at Kobe's Oji Zoo lived up to 28-y
 
 		
 <p>
-This article was inspired by a casual remark made during a lecture at <b>Columbia University's Lede Program</b> in June 2025. When instructing students to use the Python computing library <b>“Pandas”</b> for homework, lecturer Sandy Sadhya added that it was not the animal panda. However, I took it seriously and decided to write a story about pandas. It turned out to be an unexpected and enjoyable journey.
+This article was inspired by a casual remark made during a lecture at <b>Columbia University's Lede Program</b> in June 2025. When instructing students to use the Python computing library <b>“Pandas”</b> for homework, lecturer Sandy Sadhya added that it was not the animal panda. However, I took it <b>seriously</b> and decided to write a story about pandas. It turned out to be an unexpected and enjoyable journey.
 </p>
 <p>
-For those interested: The individual giant panda data used in the graphs was sourced from official zoo websites and other reliable blog articles. It was created using a combination of manual data entry in Excel and simple web scraping. The data was imported into DataWrapper, where four types of images were output per series, and then manually overlaid in Adobe Illustrator. You can find the code <a href="https://github.com/jsoma/page-templates/">here</a>
+For those interested: The individual giant panda data used in the graphs was sourced from official zoo websites and other reliable blog articles. It was created using a combination of manual data entry in Excel and simple web scraping. The data was imported into DataWrapper, where four types of images were output per series, and then manually overlaid in Adobe Illustrator. You can find the code <a href="https://github.com/jhonma/panda_diplomacy/">here</a>
 </p>
         </div>
     </div>
