--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ If the panda had the desire to continue fostering relations between the two coun
                 src="https://article-image-ix.nikkei.com/https%3A%2F%2Fimgix-proxy.n8s.jp%2FDSXZQO6589590026062025000000-1.jpg?ixlib=js-3.8.0&w=1276&h=850&auto=format%2Ccompress&fit=crop&bg=FFFFFF&s=2847af0cdbfd0b76f20a7159f857d7ce">
 
 		<figcaption>
-Tantan, the last surviving female giant panda at Kobe's Oji Zoo lived up to 28-year old.
+Tantan, the last female giant panda at Kobe's Oji Zoo lived up to 28-year old.
 		</figcaption>
 
         </figure>
