--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ He's visit comes amid tensions between the two countries over semiconductors, ra
             <img
                 src="https://article-image-ix.nikkei.com/https%3A%2F%2Fimgix-proxy.n8s.jp%2FDSXZQO6330149029042025000000-1.jpg?ixlib=js-3.8.0&w=1276&h=850&auto=format%2Ccompress&fit=crop&bg=FFFFFF&s=99f7503031851ba9a97322ce61ffffca">
 
-            <figcaption>Yutaka Moriyama (left), No. 2 in the ruling party, and Zhao Leji (right), No. 3 in the Chinese Communist Party.Photo: Kyodo</figcaption>
+            <figcaption>Yutaka Moriyama (left), No. 2 in the ruling party, and Zhao Leji (right), No. 3 in the Chinese Communist Party. (Kyodo)</figcaption>
         </figure>
 
 <!-- ENDS --->
@@ -256,7 +256,7 @@ The second graph shows the total number of pandas based on the above matrix. A t
         <figure>
             <img
                 src="https://article-image-ix.nikkei.com/https%3A%2F%2Fimgix-proxy.n8s.jp%2FDSXZQO6599009027062025000000-1.jpg?ixlib=js-3.8.0&w=1276&h=798&auto=format%2Ccompress&fit=crop&bg=FFFFFF&s=26948f3cffa145d13d9d75fc39b77cac">
-            <figcaption>On the final day of its public exhibition, Sai Hin is photographed by many visitors at Adventure World in Shirahama Town, Wakayama Prefecture (Nikkei)</figcaption>
+            <figcaption>On the final day of its public exhibition, Sai Hin is photographed by many visitors at Adventure World in Shirahama Town, Wakayama Prefecture. (Nikkei)</figcaption>
 
         </figure>
     </div>
@@ -287,7 +287,7 @@ If the panda had the desire to continue fostering relations between the two coun
                 src="https://article-image-ix.nikkei.com/https%3A%2F%2Fimgix-proxy.n8s.jp%2FDSXZQO6589590026062025000000-1.jpg?ixlib=js-3.8.0&w=1276&h=850&auto=format%2Ccompress&fit=crop&bg=FFFFFF&s=2847af0cdbfd0b76f20a7159f857d7ce">
 
 		<figcaption>
-Tantan, the last female giant panda at Kobe's Oji Zoo lived up to 28-year old.
+Tantan, the last female giant panda at Kobe's Oji Zoo lived up to 28-year old.(Kobe City via Kyodo)
 		</figcaption>
 
         </figure>
