--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@ https://jsoma.github.io/page-templates/basic/index.html
 <body>
     <div class="content">
         <div class="header">
-            <h1>Panda Diplomacy: How China Leverage its Soft Power Against Japan</h1>
-            <p class="subhead">Japan begs its neighbor a new panda as the lease period is expiring. Is it sounds natural because that animal is native to China? The answer is not that simple.
+            <h1>Panda Diplomacy: How China Leverages its Soft Power Against Japan</h1>
+            <p class="subhead">Japan is beggging its neighbor for a new panda as the currnet lease period for the animal is expiring. Does it sound natural because that animal is native to China? The answer is not that simple.
 		</p>
         </div>
         <div class="byline">
@@ -159,9 +159,9 @@ https://jsoma.github.io/page-templates/basic/index.html
 	<ul>
             	<li>Negotiations between China and Japan over pandas have reached a critical stage. If they fail, Japan will face an era without pandas within its borders for the first time in half a century.
 		</li><br>
-            	<li>The bilateral cooperation on breeding these animals has proven successful. According to our data analysis, Japan has bred far more pandas than it borrowed from China and has exported them back to the country.
+            	<li>The bilateral cooperation in breeding these animals has proven successful. According to our data analysis, Japan has bred far more pandas than it borrowed from China and has exported them back to the country.
 		</li><br>
-	        <li>Regardless of where they were born, the practical control over all pandas remains with the Chinese government, and Japan cannot keep the pandas it has bred within its borders. Efforts are now being made by Tokyo to secure the goodwill of Beijing.
+	        <li>Regardless of where they were born, the practical control over all pandas remains with the Chinese government, and Japan cannot keep the pandas it has bred within its borders. Tokyo is now making every effort to secure Beijing's goodwill.
 		</li><br>
 	</ul>
     </div>
@@ -178,7 +178,7 @@ https://jsoma.github.io/page-templates/basic/index.html
 Chinese Vice Premier He Lifeng is expected to visit Japan soon, according to multiple media reports published on July 7. This comes after a delegation of parliament members, including Yutaka Moriyama, the No. 2 in the ruling party, held a series of talks with Chinese government officials, including Zhao Leji, the No. 3 in the Chinese Communist Party, in Beijing at the end of April and requested a visit by Communist Party officials to Japan.
 </p>
 <p>
-He's visit comes amid tensions between the two countries over semiconductors, rare earths, and the geopolitics of the Taiwan Strait. However, the news headlines were dominated by the giant panda loan issue.During his visit to China, Moriyama emphasized that “human exchange and mutual understanding are essential for improving relations between the two countries, given that the feelings of the two peoples are not exactly friendly,” while requesting the loan of giant pandas in front of reporters' cameras.
+He's visit comes amid tensions between the two countries over semiconductors, rare earths, and the geopolitics of the Taiwan Strait. However, the news headlines were dominated by the giant panda loan issue. During his visit to China, Moriyama emphasized that “human exchange and mutual understanding are essential for improving relations between the two countries, given that the feelings of the two peoples are not exactly friendly,” while requesting the loan of giant pandas in front of reporters' cameras.
 </p>
 
 
@@ -195,7 +195,7 @@ He's visit comes amid tensions between the two countries over semiconductors, ra
 
 
 <h4>
-Japan Likely to be without Pandas 
+Japan Likely to Be without Pandas 
 </h4>
 
 <p>
@@ -205,10 +205,13 @@ Four pandas at Adventure World, a zoo in Wakayama, near Osaka, were returned to 
 The loan of pandas has always been used as a bargaining chip in Chinese diplomacy. Pandas first arrived in Japan in September 1972, when Prime Minister Kakuei Tanaka established diplomatic relations with China for the first time since World War II. On October 28 of the same year, two pandas named Kankan and Lanlan arrived in Japan. The explosive panda boom centered on Ueno Zoo in Tokyo had a significant impact on improving Japan's image of China.
 </p>
 <p>
-Later, Adventure World in Wakayama Prefecture, operated by a private company, launched the world's first joint Sino-Japanese panda breeding program using the breeding loan system in 1994. Eimei, who arrived at the park at that time, became a key figure in breeding research, giving birth to a total of 16 cubs before being returned to China in February 2023.In 1994, Kobe City Oji Zoo, located near Osaka, also added panda breeding facilities to its grounds.
+Later, Adventure World in Wakayama Prefecture, operated by a private company, launched the world's first joint Sino-Japanese panda breeding program using the breeding loan system in 1994. In the same year, Kobe City Oji Zoo, located near Osaka, also added panda breeding facilities to its grounds.
 </p>
 <p>
-Since 2000, panda cubs have been born at domestic zoos almost every year, attracting media attention. For a nation that has grown so attached to pandas over more than half a century, the possibility of pandas disappearing from domestic zoos was perceived as a far more real threat than the potential war over the strait. Each transaction was based on prior loan agreements and was by no means surprising. However, given the timing of the repatriation, which coincided with numerous diplomatic negotiations, it is not surprising that there has been much speculation about whether the decision was intentional or not.
+Since 2000, panda cubs have been born at domestic zoos almost every year, attracting media attention. Eimei, a female panda at Adventure World, became a key figure in breeding, giving birth to a total of 16 cubs before being returned to China in February 2023. 
+</p>
+<p>	
+For a nation that has grown so attached to pandas over more than half a century, the possibility of pandas disappearing from domestic zoos was perceived as a far more real threat than the potential war over the strait. Each transaction was based on prior loan agreements and was by no means surprising. However, given the timing of the repatriation, which coincided with numerous diplomatic negotiations, it is not surprising that there has been much speculation about whether the decision was intentional or not.
 </p>
 
 
@@ -230,7 +233,7 @@ Overlooked Contribution in Conservation
 
 	
 <p>
-To investigate this issue, we first obtained data on all giant pandas previously kept in Japan, including their names, locations, and periods of captivity, from multiple public sources.We classified the start as either “loan from China” or “birth in Japan,” and the end as either “return to China” or “death in Japan,” resulting in four possible combinations. The graph above analyzes the records of each individual based on this matrix. Individuals born at Adventure World Zoo were transferred to China under the agreement with China, with the exception of a few cases.
+To investigate this issue, we first obtained data on all giant pandas previously kept in Japan, including their names, locations, and periods of captivity, from multiple public sources. We classified the start as either “loan from China” or “birth in Japan” and the end as either “return to China” or “death in Japan,” resulting in four possible combinations. The graph above analyzes the records of each individual based on this matrix. Individuals born at Adventure World Zoo were transferred to China under the agreement with China, with the exception of a few cases.
 </p>
 
 
@@ -247,7 +250,7 @@ To investigate this issue, we first obtained data on all giant pandas previously
 <!-- ENDS --->
 	    
 <p>
-The second graph shows the total number of pandas based on the above matrix. A total of 37 pandas have been raised in Japan. Among these, 23 were born in Japan, far exceeding the number of pandas loaned from China (including cases where they spent their entire lives at the zoo and were effectively considered “gifts” to Japan).Of the pandas born in Japan, 19 have been transferred or are scheduled to be transferred to China, excluding those that died at a young age. With a global population of over 2,400, pandas are listed on the IUCN Red List, and Japanese zoos have made a significant contribution to the breeding of one of the most famous animals in the world, a fact that is not widely known.
+The second graph shows the number of pandas based on the above matrix. A total of 37 pandas have been kept in Japan. Among these, 23 were born in Japan, far exceeding the number of pandas loaned from China (including cases where they spent their entire lives at the zoo and were effectively considered “gifts” to Japan). Of the pandas born in Japan, 19 have been transferred or are scheduled to be transferred to China, excluding those that died at a young age. With a global population of over 2,400, pandas are listed on the IUCN Red List, and Japanese zoos have made a significant contribution to the breeding of one of the most famous animals in the world, a fact that is not widely known.
 </p>
 
 <!-- PHOTO2 HERE -->
@@ -265,14 +268,14 @@ The second graph shows the total number of pandas based on the above matrix. A t
 
 
 <h4>
-Dead Panda Still Has its Role
+Dead Panda Still Has Its Role
 </h4>
 
 <p>
 There is one example that illustrates China's strict attitude toward contracts. Tan Tan, a giant panda at Oji Zoo in Kobe, Hyogo Prefecture, died on March 31, 2024, at the age of 28, the oldest in Japan.
 </p>
 <p>
-Under the contract with the Chinese side, the panda was to be returned even after death, and Kobe City had completed a taxidermy and skeletal specimen at a cost of approximately 7.3 million yen by March 2025. The taxidermy arrived in China on the morning of June 26.
+Under the contract with the Chinese side, the panda was to be returned even after death, and Kobe City had completed a taxidermy and skeletal specimen at a cost of approximately 50,000 dollars by March 2025. The taxidermy arrived in China on the morning of June 26.
 </p>
 <p>
 If the panda had the desire to continue fostering relations between the two countries even after its death, what a poignant story that would be.
@@ -287,7 +290,7 @@ If the panda had the desire to continue fostering relations between the two coun
                 src="https://article-image-ix.nikkei.com/https%3A%2F%2Fimgix-proxy.n8s.jp%2FDSXZQO6589590026062025000000-1.jpg?ixlib=js-3.8.0&w=1276&h=850&auto=format%2Ccompress&fit=crop&bg=FFFFFF&s=2847af0cdbfd0b76f20a7159f857d7ce">
 
 		<figcaption>
-Tantan, the last female giant panda at Kobe's Oji Zoo lived up to 28-year old.(Kobe City via Kyodo)
+Tantan, the last female giant panda at Kobe's Oji Zoo lived to be 28-year old.(Kobe City via Kyodo)
 		</figcaption>
 
         </figure>
@@ -305,7 +308,7 @@ Tantan, the last female giant panda at Kobe's Oji Zoo lived up to 28-year old.(K
 This article was inspired by a casual remark made during a lecture at <a href="https://ledeprogram.com/">Columbia University's Lede Program</a> in June 2025. When instructing students to use the Python computing library <b>“Pandas”</b> for homework, lecturer <a href="https://x.com/sandhya__k">@sandhya__k</a> added that it was not the animal panda. However, I took it <b>seriously</b> and decided to write a story about pandas. It turned out to be an unexpected and enjoyable journey.
 </p>
 <p>
-For those interested: The individual giant panda data used in the graphs was sourced from official zoo websites and other reliable blog articles. It was created using a combination of manual data entry in Excel and simple web scraping. The data was imported into DataWrapper, where four types of images were output per series, and then manually overlaid in Adobe Illustrator. You can find the code <a href="https://github.com/jhonma/panda_diplomacy/">here</a>
+For those interested: The individual giant panda data used in the graphs was sourced from official zoo websites and other reliable blog articles. It was created using a combination of manual data entry in Excel and simple web scraping. The data was imported into DataWrapper, where four types of images were output per series, and then manually overlaid in Adobe Illustrator. You can find the code <a href="https://github.com/jhonma/panda_diplomacy/">here</a>.
 </p>
         </div>
     </div>
