--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ https://jsoma.github.io/page-templates/basic/index.html
     <div class="content">
         <div class="header">
             <h1>Panda Diplomacy: How China Leverages its Soft Power Against Japan</h1>
-            <p class="subhead">Japan is beggging its neighbor for a new panda as the currnet lease period for the animal is expiring. Does it sound natural because that animal is native to China? The answer is not that simple.
+            <p class="subhead">Japan is begging its neighbor for a new giant panda as the currnet lease period is expiring. Does it sound natural because that animal is native to China? The answer is not that simple.
 		</p>
         </div>
         <div class="byline">
