--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ https://jsoma.github.io/page-templates/basic/index.html
         img,
         video {
             /* max-width: 100%; */
-            width: 100%;
-            hight: 500px;
+            width: 600px;
+	    /* hight: 500px; */
 
 	}
 
