--- a/index.html
+++ b/index.html
@@ -75,13 +75,14 @@ https://jsoma.github.io/page-templates/basic/index.html
             font-family: 'Lora', Georgia, serif;
         }
 
-        iframe,
-        img,
-        video {
+        iframe{
             /* max-width: 100%; */
             width: 600px;
 	    /* hight: 500px; */
-
+	}
+        img{
+             max-width: 100%; 
+	    /* hight: 500px; */
 	}
 
         p {
