--- a/index.html
+++ b/index.html
@@ -75,11 +75,6 @@ https://jsoma.github.io/page-templates/basic/index.html
             font-family: 'Lora', Georgia, serif;
         }
 
-        iframe{
-            /* max-width: 100%; */
-            width: 600px;
-	    /* hight: 500px; */
-	}
         img{
              max-width: 100%; 
 	    /* hight: 500px; */
@@ -98,6 +93,9 @@ https://jsoma.github.io/page-templates/basic/index.html
         }
 
         iframe {
+	    width: 600px;
+	    text-align:center;
+            margin:auto;
             padding-bottom: 1.2em;
         }
 
