--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ https://jsoma.github.io/page-templates/basic/index.html
         iframe {
 	    width: 600px;
 	    text-align:center;
-            margin:auto;
+            margin: 0 auto;
             padding-bottom: 1.2em;
         }
 
