--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ https://jsoma.github.io/page-templates/basic/index.html
 	.center-graph {
 	    display: flex;
 	    justify-content: center;
-	    margin-bottom: 2em;
+	    margin: 0;
 	}	    
 	    
         .full-width figure {
