--- a/index.html
+++ b/index.html
@@ -92,10 +92,6 @@ https://jsoma.github.io/page-templates/basic/index.html
             line-height: 1.6;
         }
 
-        iframe {
-            padding-bottom: 1.2em;
-        }
-
         code {
             font-family: 'Courier New', monospace;
             background: #fffbaf;
@@ -107,6 +103,12 @@ https://jsoma.github.io/page-templates/basic/index.html
 	    justify-content: center;
 	    margin: 0;
 	}	    
+
+	.center-graph iframe {
+		height: 326px; 
+		padding-bottom: 1.2em;
+
+	}
 	    
         .full-width figure {
             text-align: center;
