--- a/index.html
+++ b/index.html
@@ -141,7 +141,12 @@ https://jsoma.github.io/page-templates/basic/index.html
                 padding-left: 0.5em;
                 padding-right: 0.5em;
             }
-        }
+		
+	.center-graph iframe {
+		height: 556px; 
+		padding-bottom: 1.2em;
+	     }
+	}
     </style>
 </head>
 
