mexico story added

--- a/index.html
+++ b/index.html
@@ -259,7 +259,15 @@ To investigate this issue, we first obtained data on all giant pandas previously
 <!-- ENDS --->
 	    
 <p>
-The second graph shows the number of pandas based on the above matrix. A total of 37 pandas have been kept in Japan. Among these, 23 were born in Japan, far exceeding the number of pandas loaned from China (including cases where they spent their entire lives at the zoo and were effectively considered “gifts” to Japan). Of the pandas born in Japan, 19 have been transferred or are scheduled to be transferred to China, excluding those that died at a young age. With a global population of over 2,400, pandas are listed on the IUCN Red List, and Japanese zoos have made a significant contribution to the breeding of one of the most famous animals in the world, a fact that is not widely known.
+The second graph shows the number of pandas based on the above matrix. A total of 37 pandas have been kept in Japan. Among these, 23 were born in Japan, far exceeding the number of pandas loaned from China (including cases where they spent their entire lives at the zoo and were effectively considered “gifts” to Japan). 
+</p>
+
+<p>
+Of the pandas born in Japan, 19 have been transferred or are scheduled to be transferred to China, excluding those that died at a young age. With a global population of over 2,400, pandas are listed on the IUCN Red List, and Japanese zoos have made a significant contribution to the breeding of one of the most famous animals in the world, a fact that is not widely known.
+</p>
+
+<p>
+In the 1980s, China stopped exporting pandas as a gift to other countries and instead adopted a policy of lending them, with the typical annual fee of $1 million per pair. One exception is the giant panda Shuan Shuan, who arrived at Ueno Zoo from the Chapultepec Zoo in Mexico in 2003. Shuan Shuan was born to a pair of pandas transferred from China to Mexico before this policy change and held Mexican nationality.     
 </p>
 
 <!-- PHOTO2 HERE -->
