--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ Of the pandas born in Japan, 19 have been transferred or are scheduled to be tra
 </p>
 
 <p>
-In the 1980s, China stopped exporting pandas as a gift to other countries and instead adopted a policy of lending them, with the typical annual fee of $1 million per pair. One exception is the giant panda Shuan Shuan, who arrived at Ueno Zoo from the Chapultepec Zoo in Mexico in 2003. Shuan Shuan was born to a pair of pandas transferred from China to Mexico before this policy change and held Mexican nationality.     
+In the 1980s, China stopped exporting pandas as a gift to other countries and instead adopted a policy of lending them, with the typical annual fee of $1 million per pair. With very few exceptions, all pandas in Japan, including those born domestically, have been owned by China. One exception is the giant panda Shuan Shuan, who arrived at Ueno Zoo from the Chapultepec Zoo in Mexico in 2003. Shuan Shuan was born to a pair of pandas transferred from China to Mexico before this policy change and held Mexican nationality. Two years later, she was returned to her birthplace. 
 </p>
 
 <!-- PHOTO2 HERE -->
