--- a/index.html
+++ b/index.html
@@ -340,7 +340,28 @@ For a nation that has grown so attached to pandas over more than half a century,
 #g-graph1-_1 .g-cstyle1 {
 	font-size:10px;
 }
+	
 
+@media (max-width: 600px) {
+  .g-pstyle1 {
+    font-size: 16px !important;
+    line-height: 22px !important;
+  }
+  .g-pstyle2 {
+    font-size: 11px !important;
+    line-height: 16px !important;
+  }
+  .g-pstyle3 {
+    font-size: 10px !important;
+    line-height: 14px !important;
+  }
+  .g-pstyle4 {
+    font-size: 14px !important;
+    line-height: 20px !important;
+  }
+}
+	
+	
 </style>
 
 <div id="g-graph1-box" class="ai2html">
