--- a/index.html
+++ b/index.html
@@ -344,63 +344,63 @@ For a nation that has grown so attached to pandas over more than half a century,
 /*ケータイ用*/
 @media (max-width: 600px) {
   #g-jp-pandas-combined2-_1 .g-pstyle1,
-  #g-graph1 .g-pstyle1 {
+  #g-graph1_1 .g-pstyle1 {
     font-size: 14px !important;
     line-height: 18px !important;
   }
   #g-jp-pandas-combined2-_1 .g-pstyle2,
-  #g-graph1 .g-pstyle2 {
+  #g-graph1_1 .g-pstyle2 {
     font-size: 9px !important;
     line-height: 12px !important;
   }
   #g-jp-pandas-combined2-_1 .g-pstyle3,
-  #g-graph1 .g-pstyle3 {
+  #g-graph1_1 .g-pstyle3 {
     font-size: 8px !important;
     line-height: 11px !important;
   }
   #g-jp-pandas-combined2-_1 .g-pstyle4,
-  #g-graph1 .g-pstyle4 {
+  #g-graph1_1 .g-pstyle4 {
     font-size: 12px !important;
     line-height: 16px !important;
   }
   #g-jp-pandas-combined2-_1 .g-pstyle5,
-  #g-graph1 .g-pstyle5 {
+  #g-graph1_1 .g-pstyle5 {
     font-size: 8px !important;
     line-height: 11px !important;
   }
   #g-jp-pandas-combined2-_1 .g-pstyle6,
-  #g-graph1 .g-pstyle6 {
+  #g-graph1_1 .g-pstyle6 {
     font-size: 10px !important;
     line-height: 14px !important;
   }
   #g-jp-pandas-combined2-_1 .g-pstyle7,
-  #g-graph1 .g-pstyle7 {
+  #g-graph1_1 .g-pstyle7 {
     font-size: 10px !important;
     line-height: 14px !important;
   }
   #g-jp-pandas-combined2-_1 .g-pstyle8,
-  #g-graph1 .g-pstyle8 {
+  #g-graph1_1 .g-pstyle8 {
     font-size: 11px !important;
     line-height: 15px !important;
   }
 
-  #g-graph1 .g-pstyle9 {
+  #g-graph1_1 .g-pstyle9 {
     font-size: 6px !important;
     line-height: 10px !important;
   }
-  #g-graph1 .g-pstyle10 {
+  #g-graph1_1 .g-pstyle10 {
     font-size: 12px !important;
     line-height: 15px !important;
   }
-  #g-graph1 .g-pstyle11 {
+  #g-graph1_1 .g-pstyle11 {
     font-size: 9px !important;
     line-height: 11px !important;
   }
 
-  #g-graph1 .g-cstyle0 {
+  #g-graph1_1 .g-cstyle0 {
     font-size: 10px !important;
   }
-  #g-graph1 .g-cstyle1 {
+  #g-graph1_1 .g-cstyle1 {
     font-size: 8px !important;
   }
 }
