--- a/index.html
+++ b/index.html
@@ -1695,7 +1695,7 @@ Tantan, the last female giant panda at Kobe's Oji Zoo lived to be 28-year old.(K
 This article was inspired by a casual remark made during a lecture at <a href="https://ledeprogram.com/">Columbia University's Lede Program</a> in June 2025. When instructing students to use the Python computing library <b>“Pandas”</b> for homework, lecturer <a href="https://x.com/sandhya__k">@sandhya__k</a> added that it was not the animal panda. However, I took it <b>seriously</b> and decided to write a story about pandas. It turned out to be an unexpected and enjoyable journey.
 </p>
 <p>
-For those interested: The individual giant panda data used in the graphs was sourced from official zoo websites and other reliable blog articles. It was created using a combination of manual data entry in Excel and simple web scraping. The data was imported into DataWrapper, where four types of images were output per series, and then manually overlaid in Adobe Illustrator. You can find the code <a href="https://github.com/jhonma/panda_diplomacy/">here</a>. The explanatory note is <a href="https://github.com/jhonma/panda_diplomacy/">here</a>.
+For those interested: The individual giant panda data used in the graphs was sourced from official zoo websites and other reliable blog articles. It was created using a combination of manual data entry in Excel and simple web scraping. The data was imported into DataWrapper, where four types of images were output per series, and then manually overlaid in Adobe Illustrator. You can find the code <a href="https://github.com/jhonma/panda_diplomacy/">here</a>. The explanatory note is <a href="https://jhonma.github.io/panda_scrolly/">here</a>.
 </p>
         </div>
     </div>
